--- a/localisation/english/MD_focus_PER_l_english.yml
+++ b/localisation/english/MD_focus_PER_l_english.yml
@@ -920,7 +920,7 @@
  PER_tehran_etelaat_base: "Tehran Etelaat Base"
  PER_tehran_etelaat_base_desc: "Ensuring that our capital's population is aligned with our ideals is important enough to warrant the construction of a news outlet that can teach the populace how to indentify foreign spies!"
  PER_irgc_missile_command: "IRGC Missile Command"
- PER_irgc_missile_command_desc: "Having a separate command structure to ensure the autonomy of our missile system is pretty important, especially since such an office would be in charge of the research of missile technonogy."
+ PER_irgc_missile_command_desc: "Having a separate command structure to ensure the autonomy of our missile system is pretty important, especially since such an office would be in charge of the research of missile technology."
  PER_armenian_voluntears: "Armenian Volunteers"
  PER_armenian_voluntears_desc: "How many Armenians do you think would volunteer at a chance to fight their archnemesis, Azerbaijan? Let's ask!"
  PER_russias_support: "Russia's Support"
