--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -2002,9 +2002,9 @@
  SOV_combined_economic_system: "Combined Economic System"
  SOV_combined_economic_system_desc: "By reaching the compromise with oligarchs and state, we can finally move onto fixing our economy with truly unique Russian way."
  SOV_oligarchic_republic: "Oligarchic Republic"
- SOV_oligarchic_republic_desc: "Now, when oligarchs have done all of their mergers we can finally build a new Russia, an oligarhcic Russia."
+ SOV_oligarchic_republic_desc: "Now, when oligarchs have done all of their mergers we can finally build a new Russia, an oligarchy Russia."
  SOV_continue_etatist_rise: "Continue Etatist Rise"
- SOV_continue_etatist_rise_desc: "Russia does not need rebelious clan of oligarchs which sell its resources abroad. Russia needs a strong leadership, and we will provide it!"
+ SOV_continue_etatist_rise_desc: "Russia does not need rebellious clan of oligarchs which sell its resources abroad. Russia needs a strong leadership, and we will provide it!"
 
  sov_other.13.t: "Russian proposal..."
  sov_other.13.d: "New Russian democratic government proposes mutual linguistic programs on recognising Russian language as another governmental one in Ukraine, while Russia will assist in teaching Ukrainian language to ethnic Ukrainians in Russia. They sentiment is to ensure lack of conflict between two nation, mutual friendship and cultural exchange."
