Marine Event Chain

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -339,6 +339,18 @@
  HOL_Marine_Moving_desc: "The Dutch government decided to relocate the Korps Mariniers from their current base in Doorn to a new facility in Vlissingen. This move was intended to provide the marines with modern infrastructure and enhance their operational capabilities. The choice of Vlissingen, in the province of Zeeland, was also aimed at stimulating regional economic development and offering the marines a strategic location near the North Sea. However, the relocation plan faced resistance due to concerns over the impact on personnel and their families, as well as logistical and financial challenges."
  HOL_Marine_Moved: "Modern Marine Base"
  HOL_Marine_Moved_desc: "The relocation of the Korps Mariniers to their new base in Vlissingen has been successfully completed. The marines now operate from state-of-the-art facilities that significantly enhance their operational readiness. The new location in Vlissingen provides strategic advantages, including quick access to the North Sea for maritime operations. The move has also contributed to economic growth in Zeeland, creating jobs and attracting investment to the region. Despite initial challenges and resistance during the planning phase, the transition has been smooth, and the marines have effectively adapted to their new environment."
+ HOL_Marine_Modified: "Marine Relocation Partially Completed"
+ HOL_Marine_Modified_desc: "The relocation plan for the Royal Netherlands Marine Corps has been modified to address public and parliamentary concerns. While the Marines benefit from new facilities, the plan is not fully realized, leading to a moderate increase in operational efficiency and capacity."
+ HOL_Marine_Debate: "Marine Relocation Debated"
+ HOL_Marine_Debate_desc: "The relocation of the Marines is being debated in Parliament, delaying the process and leading to uncertainty within the armed forces."
+ HOL_Marine_Public_Support: "Public Support for Marine Relocation"
+ HOL_Marine_Public_Support_desc: "The government and public are in favor of the Marines' relocation to Vlissingen, boosting the Marines' morale and efficiency."
+ HOL_Marine_Modified: "Marine Relocation Partially Completed"
+ HOL_Marine_Modified_desc: "Due to public concerns and political compromise, the Marines' relocation plan was modified. Although the new base in Vlissingen is functional, the full benefits of the relocation are not realized."
+ HOL_Marine_Relocation_Cancelled: "Marine Relocation Cancelled"
+ HOL_Marine_Relocation_Cancelled_desc: "The plan to relocate the Marines to Vlissingen has been scrapped. This decision restores stability but reduces the Marines' capacity for operations."
+ HOL_Local_Communities_Support: "Local Community Support for Relocation"
+ HOL_Local_Communities_Support_desc: "Investments in local communities surrounding Vlissingen have improved public support for the Marine relocation, boosting local economic growth and production capacity."
  HOL_Marine1: "Koninklijke Marine"
  HOL_Marine1_desc: "The Koninklijke Marine, or Royal Netherlands Navy, is the naval branch of the Dutch Armed Forces and one of the oldest navies in the world, with origins dating back to the 15th century. It plays a crucial role in the defense of the Netherlands, both at home and abroad, and is also involved in various international missions, including NATO operations, peacekeeping, and humanitarian efforts. The Royal Netherlands Navy is known for its advanced and versatile fleet, which includes frigates, submarines, patrol vessels, and amphibious ships. The navy also operates a range of aircraft and helicopters, primarily for maritime patrol, transport, and search and rescue missions. The Korps Mariniers, the Netherlands' elite marine corps, is an integral part of the navy, specializing in amphibious operations and rapid response missions."
  HOL_Submarine_Modernization_Idea: "Submarine Modernization"
@@ -703,6 +715,60 @@
  HOL_destroyer_research.01.d: "You have already completed the research for the 2005 Destroyer technology. Would you like to focus on advancing stealth destroyers or enhancing future destroyer designs?"
  HOL_destroyer_research.01.a: "Focus on Stealth Destroyers (15% Research Bonus)"
  HOL_destroyer_research.01.b: "Advance to the 2025 Destroyer Hull (1-Year Ahead of Time)"
+ HOL_marines_relocation.01.t: "Plans for Marine Relocation to Vlissingen Exposed"
+ HOL_marines_relocation.01.d: "A confidential report detailing the planned relocation of the Royal Netherlands Marine Corps to Vlissingen has been leaked to the public. The move aims to enhance the Marines' operational readiness by taking advantage of Vlissingen's strategic coastal location. However, the revelation has sparked mixed reactions among politicians, military officials, and local communities."
+ HOL_marines_relocation.01.a: "This is a strategic decision that will benefit our national security."
+ HOL_marines_relocation.01.b: "We need to carefully consider the implications of this move."
+ HOL_marines_relocation.01.c: "This plan is too controversial and should be abandoned."
+ HOL_marines_relocation.02A.t: "Heated Parliamentary Debate on Marine Relocation"
+ HOL_marines_relocation.02A.d: "The Dutch Parliament is abuzz with debate over the proposed relocation of the Marines to Vlissingen. Supporters argue it will enhance national security and bring economic benefits to the region. Critics, however, raise concerns about the financial cost and potential disruption to local communities."
+ HOL_marines_relocation.02A.a: "We must proceed with the relocation for the greater good."
+ HOL_marines_relocation.02A.b: "Let's find a middle ground that addresses all concerns."
+ HOL_marines_relocation.02A.c: "It's best to halt these plans and explore other options."
+ HOL_marines_relocation.02B.t: "Public Inquiry on Marine Relocation"
+ HOL_marines_relocation.02B.d: "Following the public outcry and parliamentary debate, the government has decided to conduct a public inquiry to gather more information and public input on the proposed relocation of the Marines to Vlissingen."
+ HOL_marines_relocation.02B.a: "The inquiry will provide us with the necessary insights."
+ HOL_marines_relocation.02B.b: "This is delaying our strategic decisions. Halt the inquiry."
+ HOL_marines_relocation.03A.t: "Public Reaction to Marine Relocation Plans"
+ HOL_marines_relocation.03A.d: "Public opinion is divided over the Marines' relocation to Vlissingen. Local residents express concerns about the potential impact on their community, while national security advocates praise the strategic benefits. Protests and rallies are organized by both supporters and opponents of the move."
+ HOL_marines_relocation.03A.a: "We must address the concerns of the local population."
+ HOL_marines_relocation.03A.b: "Educate the public on the benefits of this relocation."
+ HOL_marines_relocation.03A.c: "The government knows best and will proceed as planned."
+ HOL_marines_relocation.03B.t: "Compromise Plan on Marine Relocation"
+ HOL_marines_relocation.03B.d: "In an effort to address both support and opposition, a compromise plan has been proposed. This includes additional investments in local infrastructure to support the move and mitigate its impact on the community."
+ HOL_marines_relocation.03B.a: "This plan balances all interests and should be approved."
+ HOL_marines_relocation.03B.b: "We need more time to consider this compromise."
+ HOL_marines_relocation.03B.c: "This compromise is unsatisfactory. We need a new plan."
+ HOL_marines_relocation.03C.t: "Results of Public Inquiry on Marine Relocation"
+ HOL_marines_relocation.03C.d: "The public inquiry has concluded, presenting detailed insights into the potential benefits and drawbacks of relocating the Marines to Vlissingen. The report highlights both the strategic advantages and the concerns of the local community."
+ HOL_marines_relocation.03C.a: "The inquiry supports the strategic benefits. Proceed with the relocation."
+ HOL_marines_relocation.03C.b: "Adjust the relocation strategy based on the inquiry's feedback."
+ HOL_marines_relocation.03C.c: "The concerns raised are too significant. Cancel the relocation."
+ HOL_marines_relocation.04A.t: "Community Dialogue on Marine Relocation"
+ HOL_marines_relocation.04A.d: "The government has initiated a series of dialogues with local communities in Vlissingen to address their concerns and provide more information about the benefits of the relocation."
+ HOL_marines_relocation.04A.a: "Invest in local initiatives to gain support."
+ HOL_marines_relocation.04A.b: "Ensure all processes are transparent and inclusive."
+ HOL_marines_relocation.04B.t: "National Information Campaign on Marine Relocation"
+ HOL_marines_relocation.04B.d: "A nationwide information campaign has been launched to educate the public on the strategic benefits of relocating the Marines to Vlissingen."
+ HOL_marines_relocation.04B.a: "Allocate more resources to reach a wider audience."
+ HOL_marines_relocation.04B.b: "Focus the campaign on regions with the most opposition."
+ HOL_marines_relocation.04D.t: "Economic Impact of the Compromise Plan"
+ HOL_marines_relocation.04D.d: "The compromise plan includes additional investments in local infrastructure and mitigating measures to address community concerns. Economists have evaluated the potential economic benefits and costs associated with this plan."
+ HOL_marines_relocation.04D.a: "This plan balances all interests and should be approved."
+ HOL_marines_relocation.04D.b: "We need more time to consider this compromise."
+ HOL_marines_relocation.04E.t: "Extended Review of the Compromise Plan"
+ HOL_marines_relocation.04E.d: "The extended review of the compromise plan has concluded, providing deeper insights and further public feedback. The government must now decide whether to proceed with the compromise or seek new alternatives."
+ HOL_marines_relocation.04E.a: "Proceed with the Compromise"
+ HOL_marines_relocation.04E.b: "Seek New Alternatives"
+ HOL_marines_relocation.05A.t: "Government's Final Decision on Marine Relocation"
+ HOL_marines_relocation.05A.d: "After months of debate and public discourse, the government is set to make its final decision on the Marines' relocation to Vlissingen. The choice will have long-lasting implications for national security, economic development, and public trust in the government."
+ HOL_marines_relocation.05A.a: "The Marines will move to Vlissingen as planned."
+ HOL_marines_relocation.05A.b: "Adjust the relocation strategy based on public and parliamentary feedback."
+ HOL_marines_relocation.05A.c: "The Marines will remain at their current bases."
+ HOL_marines_relocation.05B.t: "Approval of New Marine Relocation Plan"
+ HOL_marines_relocation.05B.d: "The newly developed plan for the relocation of the Marines to Vlissingen has been finalized and is ready for approval. This plan includes comprehensive measures to address all previously raised concerns."
+ HOL_marines_relocation.05B.a: "The new plan addresses all issues. Proceed with relocation."
+ HOL_marines_relocation.05B.b: "We need to make some final adjustments before approval."
 
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
