Pure Pain to Code

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -311,7 +311,16 @@
  HOL_Nuke_Navy: "Nucleaire Voortstuwing van Schepen"
  HOL_Nuke_Navy_desc: "The Nucleaire Voortstuwing van Schepen (Nuclear Propulsion for Ships) initiative explores the development and implementation of nuclear-powered propulsion systems for Dutch naval and commercial vessels. This focus aims to provide sustainable and long-range propulsion solutions, reducing dependency on fossil fuels and enhancing the operational capabilities of the Dutch fleet."
  HOL_Nuke_Navy_tt: ""
- ### Ideas
+ HOL_Goalkeeper_Modernization: "Goalkeeper Modernization"
+ HOL_Goalkeeper_Modernization_desc: "The Netherlands is upgrading its Goalkeeper CIWS (Close-In Weapon System) to enhance its naval defense capabilities. This modernization project involves installing new radar and tracking systems, improving fire control, and integrating advanced ammunition types. The updated Goalkeeper systems will significantly boost the Dutch Navy's ability to defend against incoming missiles and close-range threats."
+ HOL_SMARTL_Radar_Construction: "SMART-L-Radar Construction"
+ HOL_SMARTL_Radar_Construction_desc: "The construction of the SMART-L radar system will provide the Dutch Navy with state-of-the-art long-range surveillance and tracking capabilities. This advanced radar system can detect and track ballistic missiles, aircraft, and other aerial threats at great distances. By implementing the SMART-L radar, the Netherlands enhances its situational awareness and strengthens its overall air and missile defense."
+ HOL_Hollandklasse_Frigate: "Hollandklasse Frigate Development"
+ HOL_Hollandklasse_Frigate_desc: "The Netherlands is investing in the construction of new Hollandklasse frigates to strengthen its maritime patrol and anti-submarine warfare capabilities. These frigates are equipped with advanced sensors, weapons systems, and enhanced stealth features. The Hollandklasse frigates will play a crucial role in protecting Dutch waters and supporting international maritime operations."
+ HOL_Hollandklasse_Frigate_tt: "Completing this focus will trigger a collaboration offer to [BEL.GetNameWithFlag] to jointly §Yproduce§! §G6§! Hollandklasse §Yfrigates§!, once you researched §YFrigate 2015§! with §G15%§! §Yproduction§! progress for both nations if accepted."
+ HOL_Vrouwenklasse_Destroyer: "Vrouwenklasse Development"
+ HOL_Vrouwenklasse_Destroyer_desc: "Introducing the Vrouwenklasse Anti-Submarine Frigates, the Netherlands aims to build a fleet of highly advanced and versatile frigates. These ships will feature cutting-edge missile systems, superior radar, and robust electronic warfare capabilities. The Vrouwenklasse frigates are designed to excel in both offensive and defensive naval operations, ensuring the Dutch Navy remains a formidable force."
+ ##################################################### Ideas #####################################################
  HOL_NAM1: "Nederlandse Aardolie Maatschappij"
  HOL_NAM1_desc: "The Nederlandse Aardolie Maatschappij (NAM) is a Dutch oil and gas company founded in 1947 as a joint venture between Shell and ExxonMobil. NAM is the largest producer of natural gas in the Netherlands, responsible for the exploration, production, and distribution of natural gas and oil, primarily from the Groningen gas field. The company has played a significant role in the Dutch energy sector for decades."
  HOL_Shell1: "Royal Shell"
@@ -382,7 +391,7 @@
  HOL_Economic_Landscape_Start_desc: "Analyzing and understanding the unique economic landscape of the Netherlands is crucial. By focusing on the strengths and challenges of our diverse regions, we can create tailored economic policies to maximize growth and stability across the country."
  HOL_Marechaussee1: "Koninklijke Marechaussee"
  HOL_Marechaussee1_desc: "The Koninklijke Marechaussee, the Royal Netherlands Military Police, plays a crucial role in maintaining national security and law enforcement. Responsible for border control, airport security, and military policing, the Marechaussee ensures the safety and stability of the Netherlands both at home and abroad. Their expertise in managing internal security, immigration, and public order makes them an indispensable force within the Dutch defense structure. As a well-trained and highly adaptable unit, they support both civilian and military operations, contributing to the nation's resilience in times of crisis."
- ### Modifiers
+ ##################################################### Modifiers #####################################################
  HOL_Groningen_Gas_Winning: "Gaswinning Groningen"
  HOL_Groningen_Gas_Winning_desc: "For decades, the vast gas reserves in the Groningen region have been a cornerstone of the Dutch energy sector, fueling both domestic needs and export markets. The extraction of natural gas has brought great economic benefits to the Netherlands, but it has also come at a cost. Frequent earthquakes linked to gas extraction have caused significant damage to local infrastructure and communities, raising concerns about the long-term viability of this resource. Balancing the economic gains with the social and environmental costs remains one of the greatest challenges for the Dutch government."
  HOL_Groningen_Herstelt1: "Herstel Groningen"
@@ -479,7 +488,7 @@
  HOL_econ_cycle_upg_cost_multiplier_modifier: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Upgrade Cycle Cost§! Multiplier"
  HOL_econ_cycle_upg_cost_multiplier_modifier_tt: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Upgrade Cycle Cost§! Multiplier: [?HOL_econ_cycle_upg_cost_multiplier_modifier_change|%-] \n "
  HOL_Project_Beethoven_State_Modifier: "Project Beethoven"
-### Events
+ ##################################################### Events #####################################################
  HOL_Borsele.t: "Borsele Renovation Plans"
  HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
  HOL_Borsele.a: "Go Nuclear"
@@ -776,8 +785,26 @@
  HOL_marines_relocation.05B.d: "The newly developed plan for the relocation of the Marines to Vlissingen has been finalized and is ready for approval. This plan includes comprehensive measures to address all previously raised concerns."
  HOL_marines_relocation.05B.a: "The new plan addresses all issues. Proceed with relocation."
  HOL_marines_relocation.05B.b: "We need to make some final adjustments before approval."
+ HOL_Vrouwenklasse_Frigate.Belgium.t: "Collaboration on Vrouwenklasse Frigates"
+ HOL_Vrouwenklasse_Frigate.Belgium.d: "The Netherlands has offered to collaborate on the construction of six Vrouwenklasse Frigates. Three will be built for Belgium, and three for the Netherlands. Do you accept this proposal?"
+ HOL_Vrouwenklasse_Frigate.Belgium.a: "Accept the collaboration"
+ HOL_Vrouwenklasse_Frigate.Belgium.b: "Reject the offer"
+ HOL_Vrouwenklasse_Frigate.Accepted.t: "Belgium Accepted the Vrouwenklasse Collaboration"
+ HOL_Vrouwenklasse_Frigate.Accepted.d: "Belgium has accepted the offer to collaborate on the construction of six Vrouwenklasse Frigates. Production will now begin."
+ HOL_Vrouwenklasse_Frigate.Rejected.t: "Belgium Rejected the Vrouwenklasse Collaboration"
+ HOL_Vrouwenklasse_Frigate.Rejected.d: "Belgium has rejected the offer to collaborate on the construction of the Vrouwenklasse Frigates."
+ HOL_Hollandklasse_Frigate.Offer.t: "Offer to Collaborate on Hollandklasse Frigates"
+ HOL_Hollandklasse_Frigate.Offer.d: "The Netherlands has completed research on the Hollandklasse Frigates and is offering Belgium the chance to collaborate on building six frigates, three for each nation. Will Belgium accept?"
+ HOL_Hollandklasse_Frigate.Belgium.t: "Collaboration on Hollandklasse Frigates"
+ HOL_Hollandklasse_Frigate.Belgium.d: "The Netherlands has offered to collaborate on the construction of six Hollandklasse Frigates. Three will be built for Belgium, and three for the Netherlands. Do you accept this proposal?"
+ HOL_Hollandklasse_Frigate.Belgium.a: "Accept the collaboration"
+ HOL_Hollandklasse_Frigate.Belgium.b: "Reject the offer"
+ HOL_Hollandklasse_Frigate.Accepted.t: "Belgium Accepted the Hollandklasse Collaboration"
+ HOL_Hollandklasse_Frigate.Accepted.d: "Belgium has accepted the offer to collaborate on the construction of six Hollandklasse Frigates. Production will now begin."
+ HOL_Hollandklasse_Frigate.Rejected.t: "Belgium Rejected the Hollandklasse Collaboration"
+ HOL_Hollandklasse_Frigate.Rejected.d: "Belgium has rejected the offer to collaborate on the construction of the Hollandklasse Frigates."
 
- ### Decisions
+ ##################################################### Decisions #####################################################
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
  HOL_ING_Group_Strategy_upgrade_in_progress_flag: "ING Strategy Deployed"
@@ -805,60 +832,8 @@
  HOL_ING_Group_Strategies_Expansion_Speciality3_desc: "Corporate clients are a key focus of ING’s business. By specializing in wholesale banking, ING will enhance its ability to offer customized financial solutions to large enterprises, driving corporate growth and revenue."
  HOL_ING_Group_Strategies_Expansion_Speciality4: "ING Wealth Services"
  HOL_ING_Group_Strategies_Expansion_Speciality4_desc: "Wealth management offers high returns and long-term client relationships. Specializing in wealth management will allow ING to cater to high-net-worth individuals, increasing wealth income taxation and broadening its personal finance services."
- HOL_marines_relocation.01.t: "Plans for Marine Relocation to Vlissingen Exposed"
- HOL_marines_relocation.01.d: "A confidential report detailing the planned relocation of the Royal Netherlands Marine Corps to Vlissingen has been leaked to the public. The move aims to enhance the Marines' operational readiness by taking advantage of Vlissingen's strategic coastal location. However, the revelation has sparked mixed reactions among politicians, military officials, and local communities."
- HOL_marines_relocation.01.a: "Support the Move"
- HOL_marines_relocation.01.b: "Reevaluate the Plan"
- HOL_marines_relocation.01.c: "Cancel the Move"
- HOL_marines_relocation.02A.t: "Heated Parliamentary Debate on Marine Relocation"
- HOL_marines_relocation.02A.d: ""
- HOL_marines_relocation.01.t: "Plans for Marine Relocation to Vlissingen Exposed"
- HOL_marines_relocation.01.d: "A confidential report detailing the planned relocation of the Royal Netherlands Marine Corps to Vlissingen has been leaked to the public. The move aims to enhance the Marines' operational readiness by taking advantage of Vlissingen's strategic coastal location. However, the revelation has sparked mixed reactions among politicians, military officials, and local communities."
- HOL_marines_relocation.01.a: "Support the Move"
- HOL_marines_relocation.01.b: "Reevaluate the Plan"
- HOL_marines_relocation.01.c: "Cancel the Move"
- HOL_marines_relocation.02A.t: "Heated Parliamentary Debate on Marine Relocation"
- HOL_marines_relocation.02A.d: "The Dutch Parliament is abuzz with debate over the proposed relocation of the Marines to Vlissingen. Supporters argue it will enhance national security and bring economic benefits to the region. Critics, however, raise concerns about the financial cost and potential disruption to local communities."
- HOL_marines_relocation.02A.a: "Push Forward"
- HOL_marines_relocation.02A.b: "Seek Compromise"
- HOL_marines_relocation.02A.c: "Halt the Plans"
- HOL_marines_relocation.02B.t: "Public Inquiry on Marine Relocation"
- HOL_marines_relocation.02B.d: "Following the public outcry and parliamentary debate, the government has decided to conduct a public inquiry to gather more information and public input on the proposed relocation of the Marines to Vlissingen."
- HOL_marines_relocation.02B.a: "Continue the Inquiry"
- HOL_marines_relocation.02B.b: "Halt the Inquiry"
- HOL_marines_relocation.03A.t: "Public Reaction to Marine Relocation Plans"
- HOL_marines_relocation.03A.d: "Public opinion is divided over the Marines' relocation to Vlissingen. Local residents express concerns about the potential impact on their community, while national security advocates praise the strategic benefits. Protests and rallies are organized by both supporters and opponents of the move."
- HOL_marines_relocation.03A.a: "Engage with Local Communities"
- HOL_marines_relocation.03A.b: "Launch an Information Campaign"
- HOL_marines_relocation.03A.c: "Ignore Public Opinion"
- HOL_marines_relocation.03B.t: "Compromise Plan on Marine Relocation"
- HOL_marines_relocation.03B.d: "In an effort to address both support and opposition, a compromise plan has been proposed. This includes additional investments in local infrastructure to support the move and mitigate its impact on the community."
- HOL_marines_relocation.03B.a: "Approve the Compromise"
- HOL_marines_relocation.03B.b: "Further Review Needed"
- HOL_marines_relocation.03B.c: "Reject the Compromise"
- HOL_marines_relocation.03C.t: "Results of Public Inquiry on Marine Relocation"
- HOL_marines_relocation.03C.d: "The public inquiry has concluded, presenting detailed insights into the potential benefits and drawbacks of relocating the Marines to Vlissingen. The report highlights both the strategic advantages and the concerns of the local community."
- HOL_marines_relocation.03C.a: "Approve the Relocation"
- HOL_marines_relocation.03C.b: "Modify the Plan"
- HOL_marines_relocation.03C.c: "Cancel the Relocation"
- HOL_marines_relocation.03D.t: "Emergency Parliamentary Debate After Inquiry Halt"
- HOL_marines_relocation.03D.d: "The government's decision to halt the public inquiry has led to an emergency debate in Parliament. Lawmakers are now split between those demanding the inquiry's continuation and those insisting on proceeding with the relocation."
- HOL_marines_relocation.03D.a: "Resume the Inquiry"
- HOL_marines_relocation.03D.b: "Proceed with Relocation"
- HOL_marines_relocation.04A.t: "Community Dialogue on Marine Relocation"
- HOL_marines_relocation.04A.d: "The government has initiated a series of dialogues with local communities in Vlissingen to address their concerns and provide more information about the benefits of the relocation."
- HOL_marines_relocation.04A.a: "Increase Community Support"
- HOL_marines_relocation.04A.b: "Focus on Transparency"
- HOL_marines_relocation.04B.t: "National Information Campaign on Marine Relocation"
- HOL_marines_relocation.04B.d: "A nationwide information campaign has been launched to educate the public on the strategic benefits of relocating the Marines to Vlissingen."
- HOL_marines_relocation.04B.a: "Expand the Campaign"
- HOL_marines_relocation.04B.b: "Target Key Demographics"
- HOL_marines_relocation.04C.t: "Economic Impact of Marine Relocation"
- HOL_marines_relocation.04C.d: "Economists have analyzed the potential economic impact of relocating the Marines to Vlissingen. The move is expected to bring jobs and investment to the region, but it also involves significant initial costs."
- HOL_marines_relocation.04C.a: "Invest in Local Infrastructure"
- HOL_marines_relocation.04C.b: "Seek Private Investment"
- HOL_marines_relocation.04C.c: "Limit Spending"
- ### Battalion
+ 
+ ##################################################### Battalion #####################################################
  HOL_marechaussee_support_tech: "Marechaussee Support Battalion"
  HOL_marechaussee_support_tech_desc: "The Marechaussee Support Battalion combines logistics and military police capabilities, improving supply efficiency and increasing suppression."
  HOL_marechaussee_support_company: "Marechaussee Support Battalion"
@@ -866,7 +841,7 @@
  HOL_Establish_Marechaussee_Squad: "Establish Marechaussee Squad"
  HOL_Establish_Marechaussee_Squad_desc: "The Marechaussee is a special military police force responsible for enforcing law and maintaining logistical operations. Establishing this unit will greatly improve both supply efficiency and suppression in our military operations."
 
- ### MIO
+ ##################################################### MIO #####################################################
  HOL_van_halteren_armor_manufacturer: "Van Halteren Defence"
  HOL_van_halteren_armor_manufacturer_desc: "Van Halteren Defence, known for its expertise in the development of armored vehicle components and defense systems, provides cutting-edge solutions to modernize and enhance the capabilities of the Dutch armed forces."
  HOL_Stork_PWV_armor_manufacturer: "Stork PWV"
