--- a/Changelog.txt
+++ b/Changelog.txt
@@ -112,6 +112,7 @@ v1.10.5
 
  Game Rules:
   - Added a "120" day option to the European Union cooldown
+  - Added a "Internal Faction Monthly Tick Rate" with 0.10/0.25/0.50/0.75 as options.
 
  Graphics:
   - Reworked most of the decision menu pictures
