--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -317,7 +317,7 @@
  HOL_SMARTL_Radar_Construction_desc: "The construction of the SMART-L radar system will provide the Dutch Navy with state-of-the-art long-range surveillance and tracking capabilities. This advanced radar system can detect and track ballistic missiles, aircraft, and other aerial threats at great distances. By implementing the SMART-L radar, the Netherlands enhances its situational awareness and strengthens its overall air and missile defense."
  HOL_Hollandklasse_Frigate: "Hollandklasse Frigate Development"
  HOL_Hollandklasse_Frigate_desc: "The Netherlands is investing in the construction of new Hollandklasse frigates to strengthen its maritime patrol and anti-submarine warfare capabilities. These frigates are equipped with advanced sensors, weapons systems, and enhanced stealth features. The Hollandklasse frigates will play a crucial role in protecting Dutch waters and supporting international maritime operations."
- HOL_Hollandklasse_Frigate_tt: "Completing this focus will trigger a collaboration offer to [BEL.GetNameWithFlag] to jointly §Yproduce§! §G6§! Hollandklasse §Yfrigates§!, once you researched §YFrigate 2015§! with §G15%§! §Yproduction§! progress for both nations if accepted."
+ HOL_Hollandklasse_Frigate_tt: "Completing this focus will trigger a collaboration offer to §Y[BEL.GetNameWithFlag]§! to jointly §Yproduce§! §G6§! Hollandklasse §Yfrigates§!, once you researched §YFrigate 2015§! with §G15%§! §Yproduction§! progress for both nations if accepted."
  HOL_Vrouwenklasse_Destroyer: "Vrouwenklasse Development"
  HOL_Vrouwenklasse_Destroyer_desc: "Introducing the Vrouwenklasse Anti-Submarine Frigates, the Netherlands aims to build a fleet of highly advanced and versatile frigates. These ships will feature cutting-edge missile systems, superior radar, and robust electronic warfare capabilities. The Vrouwenklasse frigates are designed to excel in both offensive and defensive naval operations, ensuring the Dutch Navy remains a formidable force."
  ##################################################### Ideas #####################################################
@@ -785,14 +785,14 @@
  HOL_marines_relocation.05B.d: "The newly developed plan for the relocation of the Marines to Vlissingen has been finalized and is ready for approval. This plan includes comprehensive measures to address all previously raised concerns."
  HOL_marines_relocation.05B.a: "The new plan addresses all issues. Proceed with relocation."
  HOL_marines_relocation.05B.b: "We need to make some final adjustments before approval."
- HOL_Vrouwenklasse_Frigate.Belgium.t: "Collaboration on Vrouwenklasse Frigates"
- HOL_Vrouwenklasse_Frigate.Belgium.d: "The Netherlands has offered to collaborate on the construction of six Vrouwenklasse Frigates. Three will be built for Belgium, and three for the Netherlands. Do you accept this proposal?"
- HOL_Vrouwenklasse_Frigate.Belgium.a: "Accept the collaboration"
- HOL_Vrouwenklasse_Frigate.Belgium.b: "Reject the offer"
- HOL_Vrouwenklasse_Frigate.Accepted.t: "Belgium Accepted the Vrouwenklasse Collaboration"
- HOL_Vrouwenklasse_Frigate.Accepted.d: "Belgium has accepted the offer to collaborate on the construction of six Vrouwenklasse Frigates. Production will now begin."
- HOL_Vrouwenklasse_Frigate.Rejected.t: "Belgium Rejected the Vrouwenklasse Collaboration"
- HOL_Vrouwenklasse_Frigate.Rejected.d: "Belgium has rejected the offer to collaborate on the construction of the Vrouwenklasse Frigates."
+ HOL_Vlissingenklasse_Frigate.Belgium.t: "Collaboration on Vrouwenklasse Frigates"
+ HOL_Vlissingenklasse_Frigate.Belgium.d: "The Netherlands has offered to collaborate on the construction of six Vrouwenklasse Frigates. Three will be built for Belgium, and three for the Netherlands. Do you accept this proposal?"
+ HOL_Vlissingenklasse_Frigate.Belgium.a: "Accept the collaboration"
+ HOL_Vlissingenklasse_Frigate.Belgium.b: "Reject the offer"
+ HOL_Vlissingenklasse_Frigate.Accepted.t: "Belgium Accepted the Vrouwenklasse Collaboration"
+ HOL_Vlissingenklasse_Frigate.Accepted.d: "Belgium has accepted the offer to collaborate on the construction of six Vrouwenklasse Frigates. Production will now begin."
+ HOL_Vlissingenklasse_Frigate.Rejected.t: "Belgium Rejected the Vrouwenklasse Collaboration"
+ HOL_Vlissingenklasse_Frigate.Rejected.d: "Belgium has rejected the offer to collaborate on the construction of the Vrouwenklasse Frigates."
  HOL_Hollandklasse_Frigate.Offer.t: "Offer to Collaborate on Hollandklasse Frigates"
  HOL_Hollandklasse_Frigate.Offer.d: "The Netherlands has completed research on the Hollandklasse Frigates and is offering Belgium the chance to collaborate on building six frigates, three for each nation. Will Belgium accept?"
  HOL_Hollandklasse_Frigate.Belgium.t: "Collaboration on Hollandklasse Frigates"
